--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Valeri Karpov <val@karpov.io>",
   "dependencies": {
     "archetype-js": "0.6.1",
+    "body-parser": "^1.17.2",
     "debug": "2.6.7",
     "express": "4.15.3",
     "mongodb": "2.2.26"
