--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.17.2",
     "debug": "2.6.7",
     "express": "4.15.3",
-    "mongodb": "2.2.26"
+    "mongodb": "2.2.26",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "mocha": "3.4.1",
